<resources>
    <string name="app_name">My Application</string>
    <string name="hangman">Hangman</string>
    <string name="choose_game_difficulty">Choose game difficulty:</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="start_game">Start Game</string>
    <string name="back_to_main">Back to main</string>
    <string name="restart_game">Start a new game.</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">s</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="you_lost">You Lost! The word was: %1$s</string>
    <string name="you_won_logged_in">You won! (+%1$d points)</string>
    <string name="you_won_">You won!</string>
    <string name="numOfAttempts">Attempts: %1$d</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account?\nRegister now!</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_to_keep_track_or_your_record"><u>Login to keep track or your record!</u></string>
    <string name="sign_up">sign up</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login_now"><u>Already have an account?\nLogin now!</u></string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="leaderboard">Leaderboard</string>
</resources>